# reachy_mini_app

./: .env.example  .gitignore  README.md  __init__.py  asr.py  llm.py  main.py  pyproject.toml  tts.py
src/reachy_mini_xiaobai_app/: __init__.py  asr.py  config.py  llm.py  main.py  moves.py  tts.py  vad.py
test/: openai_speech_client.py  test.py
tests/: hello.py  test_llm.py  vad_standalone.py
